--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "html5-qrcode": "^2.3.8",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
     "@types/node": "^20",
