--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html5-qrcode": "^2.3.8",
     "next": "14.0.0",
     "react": "^18",
+    "react-device-emulator": "^1.1.3",
     "react-dom": "^18",
     "react-router-dom": "^6.19.0"
   },
