--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-device-emulator": "^1.1.3",
     "react-dom": "^18",
+    "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
